# axum-clean-arch

./: Cargo.toml
src/: database.rs  lib.rs  main.rs  request.rs
src/controllers/: accounts.rs  root.rs  tweets.rs
src/entities/: account.rs  tweet.rs
src/repos_impl/: accounts.rs  tweets.rs
src/repositories/: accounts.rs  tweets.rs
src/services/: accounts.rs  tweets.rs
src/views/: home.rs  sign_up.rs
src/views/partial/: tweet.rs
templates/: base.html  home.html  sign_in.html  sign_up.html
