[package]
name = "rustwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.4", features = ["headers"] }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
askama = "0.10"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
bb8 = "0.7.1"
bb8-postgres = "0.7.0"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
sha2 = "0.10"
async-session = "3"
async-sqlx-session = { version = "0.4", features = ["pg", "async_std"] }